--- a/FrontEnd_GUI/Tims/src/app/app.component.html
+++ b/FrontEnd_GUI/Tims/src/app/app.component.html
@@ -1,4 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div id="container">  
+
+<div id="container">
+  <app-navbar></app-navbar>  
   <router-outlet></router-outlet>  
 </div>
