Add config page

--- a/FrontEnd_GUI/Tims/src/app/navbar/navbar.component.html
+++ b/FrontEnd_GUI/Tims/src/app/navbar/navbar.component.html
@@ -9,11 +9,11 @@
           <a class="nav-link" routerLink="/home" routerLinkActive="active">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Configuration</a>
+          <a class="nav-link" routerLink="/configuration" routerLinkActive="active">Configuration</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Statistics</a>
-          </li>
+          <a class="nav-link" href="#">Statistics</a>
+        </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/login" routerLinkActive="active">Login</a>
         </li>
@@ -23,4 +23,4 @@
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
       </form>
     </div>
-  </nav>
+</nav>
