--- a/FrontEnd_GUI/Tims/src/app/home/home.component.html
+++ b/FrontEnd_GUI/Tims/src/app/home/home.component.html
@@ -1,3 +1,13 @@
-<p>
-  Home Page
-</p>
+<div class="container">
+  <div class="jumbotron text-center">    
+    <img class="mb-4" src="assets/img/logo.png" alt="" width="72" height="72">
+    <h1 class="display-4">Threat Information Management System</h1>
+    <p class="lead">This system will combine known malicious threat information from many sources and use that information for
+    identification (incident response), detection (IDS) and mitigation. The most common types of threat intelligence
+    information are IP addresses, domains and urls that are observed to be related to malicious activity.</p>
+    <hr class="my-4">    
+    <p class="lead">
+      <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+    </p>
+  </div>
+</div>
