--- a/FrontEnd_GUI/Tims/src/app/Components/navbar/navbar.component.html
+++ b/FrontEnd_GUI/Tims/src/app/Components/navbar/navbar.component.html
@@ -12,13 +12,13 @@
       <li class="nav-item active">
         <a class="nav-link" routerLink="/home" routerLinkActive="active">Home</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item" *ngIf = isUserLogin>
         <a class="nav-link" routerLink="/configuration" routerLinkActive="active">Configuration</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item" *ngIf = isUserLogin>
         <a class="nav-link" routerLink="/statistics" routerLinkActive="active">Statistics</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item" *ngIf = !isUserLogin >
         <a class="nav-link" routerLink="/login" routerLinkActive="active">Login</a>
       </li>
     </ul>
