--- a/FrontEnd_GUI/Tims/src/app/Components/navbar/navbar.component.html
+++ b/FrontEnd_GUI/Tims/src/app/Components/navbar/navbar.component.html
@@ -21,6 +21,12 @@
       <li class="nav-item" *ngIf = !isUserLogin >
         <a class="nav-link" routerLink="/login" routerLinkActive="active">Login</a>
       </li>
+      <li class="nav-item" *ngIf = !isUserLogin >
+        <a class="nav-link" routerLink="/register" routerLinkActive="active">Register</a>
+      </li>
+      <li class="nav-item" *ngIf = isUserLogin >
+        <a class="nav-link" href="#" (click)="logout()" routerLinkActive="active">Logout</a>
+      </li>
     </ul>
   </div>
 </nav>
