--- a/FrontEnd_GUI/Tims/src/app/app.component.html
+++ b/FrontEnd_GUI/Tims/src/app/app.component.html
@@ -2,5 +2,6 @@
 
 <div id="container">
   <app-navbar></app-navbar>  
-  <router-outlet></router-outlet>  
+  <router-outlet></router-outlet>
+  <app-footer></app-footer>
 </div>
