--- a/FrontEnd_GUI/Tims/src/styles.css
+++ b/FrontEnd_GUI/Tims/src/styles.css
@@ -3,7 +3,7 @@
 @import "~font-awesome/css/font-awesome.css";
 
 body {
-    background-color: #bedade;
+    background-color: #ffffff;
 }
 
 .form-signin {
