--- a/FrontEnd_GUI/Tims/src/app/Components/footer/footer.component.html
+++ b/FrontEnd_GUI/Tims/src/app/Components/footer/footer.component.html
@@ -1,5 +1,7 @@
-<footer class="footer">
-  <div class="container">
-    <span class="footer">Copyright © 2018 Group 2 - SWENG 894 - FA18 . All rights reserved</span>
-  </div>
-</footer>
+  <footer class="footer mt-4">
+
+      <span>Copyright © 2018 Group 2 - SWENG 894 - FA18 . All rights reserved</span>
+
+  </footer>
+
+
