--- a/FrontEnd_GUI/Tims/src/app/Components/footer/footer.component.css
+++ b/FrontEnd_GUI/Tims/src/app/Components/footer/footer.component.css
@@ -1,11 +1,12 @@
 .footer {
-  position: absolute;
-  bottom: 0;
   width: 100%;
   height: 60px;
   line-height: 60px;
   background-color: #607d8b;
   color: white;
-  display: block;
+}
+
+span {
+  padding-left: 20px;
 }
 
