--- a/FrontEnd_GUI/Tims/src/app/Components/navbar/navbar.component.html
+++ b/FrontEnd_GUI/Tims/src/app/Components/navbar/navbar.component.html
@@ -28,7 +28,7 @@
         <a class="nav-link" routerLink="/register" routerLinkActive="active">Register</a>
       </li>
       <li class="nav-item" *ngIf = isUserLogin >
-        <a class="nav-link" href="/login" (click)="logout()" routerLinkActive="active">Logout</a>
+        <a class="nav-link" routerLink="/" (click)="logout()">Logout</a>
       </li>
     </ul>
   </div>
