--- a/FrontEnd_GUI/Tims/src/app/app.component.html
+++ b/FrontEnd_GUI/Tims/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
 
-<div id="container">
-  <app-navbar></app-navbar>  
-  <router-outlet></router-outlet>
-  <app-footer></app-footer>
-</div>
+  <app-navbar></app-navbar>
+  <router-outlet ></router-outlet>
+  <app-footer class="mt-auto"></app-footer>
+
+
