--- a/FrontEnd_GUI/Tims/src/app/Components/navbar/navbar.component.html
+++ b/FrontEnd_GUI/Tims/src/app/Components/navbar/navbar.component.html
@@ -30,8 +30,14 @@
       <li class="nav-item" *ngIf = !isUserLogin >
         <a class="nav-link" routerLink="/register" routerLinkActive="active">Register</a>
       </li>
-      <li class="nav-item" *ngIf = isUserLogin >
-        <a class="nav-link" routerLink="/" (click)="logout()">Logout</a>
+      <li class="nav-item dropdown" *ngIf = isUserLogin>
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Account
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" routerLink="/" (click)="logout()">Logout</a>
+          <a class="dropdown-item" routerLink="/change-password" >Change Password</a>
+        </div>
       </li>
     </ul>
   </div>
