--- a/FrontEnd_GUI/Tims/src/app/Components/download/download.component.html
+++ b/FrontEnd_GUI/Tims/src/app/Components/download/download.component.html
@@ -4,8 +4,8 @@
   </div>
   <br>
   <div class="row nav-row">
-    <a class="btn" href="http://173.253.201.228:5000/download/sample.cvs"><i class="fa fa-download"></i> Download
-      CVS</a>
+    <a class="btn" href="http://173.253.201.228:5000/download/sample.csv"><i class="fa fa-download"></i> Download
+      CSV</a>
   </div>
   <br>
   <div class="row nav-row">
