Fix change password form

--- a/FrontEnd_GUI/Tims/src/app/Components/password-change/password-change.component.html
+++ b/FrontEnd_GUI/Tims/src/app/Components/password-change/password-change.component.html
@@ -3,7 +3,7 @@
   <h1 class="h3 mb-3 font-weight-normal">Password Change</h1>
   <div class="form-group">
     <label for="oldPassword" class="sr-only">Old Password</label>
-    <input type="text" id="oldPassword" class="form-control" formControlName="oldPassword" placeholder="Old Password" [ngClass]="{ 'is-invalid': submitted && f.oldPassword.errors }" autofocus>
+    <input type="password" id="oldPassword" class="form-control" formControlName="oldPassword" placeholder="Old Password" [ngClass]="{ 'is-invalid': submitted && f.oldPassword.errors }" autofocus>
     <div *ngIf="submitted && f.oldPassword.errors" class="invalid-feedback">
       <div *ngIf="f.oldPassword.errors.required">Old password is required</div>
       <div *ngIf="f.oldPassword.errors?.minlength">
