--- a/FrontEnd_GUI/Tims/src/app/Components/download/download.component.html
+++ b/FrontEnd_GUI/Tims/src/app/Components/download/download.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-fluid">
   <div class="row nav-row">
     <a class="btn" href="http://173.253.201.228:5000/download/sample.json"><i class="fa fa-download"></i> Download JSON</a>
   </div>
