Add Statistics Tabs

--- a/FrontEnd_GUI/Tims/src/app/Components/statistic/statistic.component.html
+++ b/FrontEnd_GUI/Tims/src/app/Components/statistic/statistic.component.html
@@ -1,4 +1,17 @@
-<div class="text-center">
-  <div [chart]="chart"></div>
+<div class="container">
+  <app-tabs>
+    <app-tab tabTitle="Providers">
+      <div class="text-center">
+        <div [chart]="chart"></div>
+      </div>
+
+    </app-tab>
+    <app-tab tabTitle="Threats">
+      Tab 2 content
+    </app-tab>
+  </app-tabs>
 </div>
+
+
+
 
