--- a/FrontEnd_GUI/Tims/src/app/Components/statistic/statistic.component.html
+++ b/FrontEnd_GUI/Tims/src/app/Components/statistic/statistic.component.html
@@ -1,13 +1,16 @@
-<div class="container">
+<div class="container text-center">
+
+  <h1 class="h3 mb-3 font-weight-normal">Statistics</h1>
   <app-tabs>
     <app-tab tabTitle="Providers">
-      <div class="text-center">
-        <div [chart]="chart"></div>
-      </div>
+      <app-provider-chart></app-provider-chart>
 
     </app-tab>
     <app-tab tabTitle="Threats">
-      Tab 2 content
+      <app-threat-chart></app-threat-chart>
+    </app-tab>
+    <app-tab tabTitle="Tags">
+      <app-tags-chart></app-tags-chart>
     </app-tab>
   </app-tabs>
 </div>
